# audioToText

./: README.md  ReadMe.md  main.py  pyproject.toml
com/jinchen/voice_to_text/: AudioToText.py
